--- a/frontend/my-expo-app/package.json
+++ b/frontend/my-expo-app/package.json
@@ -11,7 +11,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^53.0.7",
+    "expo": "53.0.9",
     "expo-status-bar": "~2.2.3",
     "nativewind": "latest",
     "react": "19.0.0",
